Fixes to the Horizontal Scroller

--- a/source/assets/stylesheets/_index.scss
+++ b/source/assets/stylesheets/_index.scss
@@ -57,9 +57,6 @@ section {
         height: 100%;
         margin: 0 1px 0 0;
         padding: 0;
-        color: #ddd;
-        text-align: center;
-        cursor: pointer;
         
         .profile__image {
           width: 100px;
@@ -162,7 +159,6 @@ section {
         height: 100%;
         margin: 0 1px 0 0;
         padding: 0;
-        overflow: hidden;
         
         img {
           display: block;
